--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=laptopshop-fullstack
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#  spring.jpa.show-sql: true
+
+spring.security.user.name=nvminh162
+spring.security.user.password=nvminh162
+
+# config view engine
+# spring.mvc.view.prefix=/WEB-INF/view/
+# spring.mvc.view.suffix=.jsp
