feat: update auth user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #  spring.jpa.show-sql: true
 
-spring.security.user.name=nvminh162
-spring.security.user.password=nvminh162
+# spring.security.user.name=nvminh162
+# spring.security.user.password=nvminh162
 
 # config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
@@ -18,3 +18,5 @@ spring.security.user.password=nvminh162
 spring.servlet.multipart.max-file-size=50MB
 #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
+
+ogging.level.org.springframework.security=DEBUG
