--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=paulshop-fullstack
+spring.application.name=paulshop-app
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/paulshop
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
